--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1>Contador de Rounds</h1>
       </div>
       <div>
+        <button class="btnMenosUm" onclick="diminiuir()">-1</button>
         <button class="btnMaisUm" onclick="contar()">+1</button>
       </div>
       <div>
@@ -28,5 +29,11 @@
         <button id="reset" class="btnReset" onclick="Resetar()">Reset</button>
       </div>
     </div>
+    <span class="desenvolvido"
+      >Desenvolvido por
+      <a href="https://www.instagram.com/edusf90/" target="_blank"
+        >Edu Santana ♥</a
+      ></span
+    >
   </body>
 </html>
